2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The "in row" insertion mode is merged
	with "in table" insertion mode.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The "in table" and "in table body" insertion
	modes are merged.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: There is no "in table head" or "in table foot"
	insertion mode!

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |<noframes>| "in frameset" and "in noframes"
	now directly invoke the handler.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Codes for "in cell" insertion mode
	is merged to the "in body" insertion mode code.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Codes for "in body" and "in caption"
	insertion modes are merged.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Two |!!!next-token|s were missing.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Use numeric constant for |{content_mode}|
	instead of string constant for |{content_model_flag}|.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Add the name of the attribute
	to the "duplicate attribute" error.

2007-07-17  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Return the |class| node list.

2007-07-17  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Return the |id| node list.

	* HTML.pm.src: A typo is fixed.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Drop wrong |level => 'error'| specification
	from "in HTML:xml:lang" error.  Character position
	is now the last part of the error type in the URI error
	description.  Report "unsupported" status for language
	tags, media queries, script codes, and style sheets.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Report error if |xml:lang|
	in HTML, |lang| in XML, |xmlns| in XML, and |meta| |charset|
	in XML.

	* NanoDOM.pm (Attr.owner_document): New attribute.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>
