@@ -1,7 +1,7 @@
 1..774
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Jul 21 18:11:01 2007
-# Current time GMT:   Sat Jul 21 09:11:01 2007
+# Current time local: Sat Jul 21 18:29:43 2007
+# Current time GMT:   Sat Jul 21 09:29:43 2007
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
