@@ -1,5 +1,10 @@
 2007-07-21  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Some cases in "in table" insertion mode
+	are merged.
+
+2007-07-21  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: The "in row" insertion mode is merged
 	with "in table" insertion mode.
 
